[package]
authors = ["Olivia Hugger <olivia@fastmail.com>"]
description = "Experimental static site generator"
name = "kg"
version = "0.0.5"
license = "AGPL-3.0+"

[[bin]]
name = "kg"
path = "src/main.rs"

[dependencies.config]
version = "0.9.0"
default-features = false
features = ["toml"]

[dependencies]
comrak = "0.2.13"
nya = "0.6.0"
serde = "1.0.67"
serde_derive = "1.0.67"
yaml-rust = "0.4.0"
handlebars = "0.32.4"
serde_json = "1.0.22"
clap = "2.32.0"

[dev-dependencies]
assert_cli = "0.6.2"
