[package]
authors = ["Olivia Hugger <olivia@fastmail.com>"]
description = "Experimental static site generator"
name = "kgb"
version = "0.0.10"
license = "AGPL-3.0+"

[[bin]]
name = "kgb"
path = "src/main.rs"

[dependencies]
comrak = "0.2.13"
nya = "1.0.0"
serde = "1.0.67"
serde_derive = "1.0.67"
yaml-rust = "0.4.0"
handlebars = "1.0.0"
serde_json = "1.0.22"
clap = "2.32.0"
toml = "0.4.6"
term = "0.5.1"

[dependencies.config]
version = "0.9.0"
default-features = false
features = ["toml"]

[dev-dependencies]
assert_cli = "0.6.2"
